// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PolicyAndNotes /> if \`props.cancellationPolicyRules\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={
    Array [
      "All paid prepayments are non-refundable.",
    ]
  }
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    isStackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={6}
              >
                <GridColumn
                  verticalAlign="top"
                  width={6}
                >
                  <div
                    className="top aligned six wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Cancellation Policy
                        </h4>
                      </Header>
                    </Heading>
                    <Paragraph
                      isCompact={false}
                      key="All paid prepayments are non-refundable.0"
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        All paid prepayments are non-refundable.
                      </p>
                    </Paragraph>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> if \`props.damageDepositRules\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={
    Array [
      "A refundable damage deposit of 200.00 € (EUR) is due.",
    ]
  }
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    isStackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Damage Deposit
                        </h4>
                      </Header>
                    </Heading>
                    <Paragraph
                      isCompact={false}
                      key="A refundable damage deposit of 200.00 € (EUR) is due.0"
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        A refundable damage deposit of 200.00 € (EUR) is due.
                      </p>
                    </Paragraph>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> if \`props.extraNotesText\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText="
  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.

  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
"
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    isStackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Modal
                      hasCloseIcon={true}
                      hasPadding={true}
                      hasRoundedCorners={false}
                      header={null}
                      isFullscreen={false}
                      onClose={[Function]}
                      size="tiny"
                      trigger={
                        <Link
                          href={null}
                          isFluid={false}
                          isPositionedRight={false}
                          onClick={[Function]}
                          willOpenInNewTab={false}
                        >
                          View more
                        </Link>
                      }
                    >
                      <Modal
                        centered={true}
                        className="has-padding"
                        closeIcon={
                          <Icon
                            className={null}
                            color={null}
                            hasBorder={false}
                            isButton={false}
                            isCircular={false}
                            isColorInverted={false}
                            isDisabled={false}
                            isLabelLeft={false}
                            labelText={null}
                            labelWeight={null}
                            name="close"
                            path={null}
                            size={null}
                          />
                        }
                        closeOnDimmerClick={true}
                        closeOnDocumentClick={false}
                        dimmer="inverted"
                        eventPool="Modal"
                        onClose={[Function]}
                        size="tiny"
                        trigger={
                          <Link
                            href={null}
                            isFluid={false}
                            isPositionedRight={false}
                            onClick={[Function]}
                            willOpenInNewTab={false}
                          >
                            View more
                          </Link>
                        }
                      >
                        <Portal
                          closeOnDocumentClick={false}
                          closeOnEscape={true}
                          eventPool="Modal"
                          mountNode={<body />}
                          onClose={[Function]}
                          onMount={[Function]}
                          onOpen={[Function]}
                          onUnmount={[Function]}
                          openOnTriggerClick={true}
                          trigger={
                            <Link
                              href={null}
                              isFluid={false}
                              isPositionedRight={false}
                              onClick={[Function]}
                              willOpenInNewTab={false}
                            >
                              View more
                            </Link>
                          }
                        >
                          <Ref
                            innerRef={[Function]}
                          >
                            <RefFindNode
                              innerRef={[Function]}
                            >
                              <Link
                                href={null}
                                isFluid={false}
                                isPositionedRight={false}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                willOpenInNewTab={false}
                              >
                                <Button
                                  as={null}
                                  basic={true}
                                  floated="left"
                                  fluid={false}
                                  href={null}
                                  onClick={[Function]}
                                  target="_self"
                                  type="button"
                                >
                                  <Ref
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui basic left floated button"
                                          target="_self"
                                          type="button"
                                        >
                                          View more
                                        </button>,
                                      }
                                    }
                                  >
                                    <RefFindNode
                                      innerRef={
                                        Object {
                                          "current": <button
                                            class="ui basic left floated button"
                                            target="_self"
                                            type="button"
                                          >
                                            View more
                                          </button>,
                                        }
                                      }
                                    >
                                      <button
                                        className="ui basic left floated button"
                                        href={null}
                                        onClick={[Function]}
                                        target="_self"
                                        type="button"
                                      >
                                        View more
                                      </button>
                                    </RefFindNode>
                                  </Ref>
                                </Button>
                              </Link>
                            </RefFindNode>
                          </Ref>
                        </Portal>
                      </Modal>
                    </Modal>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> if \`props.notesText\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText="
  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
"
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    isStackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Notes
                        </h4>
                      </Header>
                    </Heading>
                    <HTML
                      htmlString="
  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
"
                    >
                      <div
                        className="html-container"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "
  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
",
                          }
                        }
                      />
                    </HTML>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> if \`props.paymentScheduleRules\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={
    Array [
      "50% due at time of booking.",
      "Remaining balance: Due later.",
    ]
  }
>
  <Grid
    areColumnsCentered={false}
    isStackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={6}
              >
                <GridColumn
                  verticalAlign="top"
                  width={6}
                >
                  <div
                    className="top aligned six wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Payment Schedule
                        </h4>
                      </Header>
                    </Heading>
                    <Paragraph
                      isCompact={false}
                      key="50% due at time of booking.0"
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        50% due at time of booking.
                      </p>
                    </Paragraph>
                    <Paragraph
                      isCompact={false}
                      key="Remaining balance: Due later.1"
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        Remaining balance: Due later.
                      </p>
                    </Paragraph>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    isStackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      className={null}
                      hasMargin={true}
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        className=""
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;
